--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Token Price Fetcher</h1>
         <div class="input-group">
-            <label for="tokenAddress">Paste Token Address:</label>
+            <label for="tokenAddress">Paste Solana Token Address:</label>
             <input type="text" id="tokenAddress" placeholder="Enter token address here">
         </div>
         <button id="fetchPriceBtn">Fetch Price</button>
